[gd_scene load_steps=7 format=3 uid="uid://c4nlk5yfyrq06"]

[ext_resource type="Script" path="res://scenes/DFS1.gd" id="1_fsjym"]
[ext_resource type="PackedScene" uid="uid://dbjnecgl87bvo" path="res://scenes/snake_segment.tscn" id="2_xbujk"]
[ext_resource type="Texture2D" uid="uid://ce7sma4dnqqke" path="res://sprites/bg.png" id="3_ukesb"]
[ext_resource type="Texture2D" uid="uid://7wwa1ye03iga" path="res://sprites/num1.png" id="4_tlp3y"]
[ext_resource type="Texture2D" uid="uid://bmefb25w3nvp6" path="res://sprites/num2.png" id="5_m0bxy"]
[ext_resource type="Texture2D" uid="uid://ccfuigqym1bgm" path="res://sprites/num3.png" id="6_yk0gr"]

[node name="DFS1" type="Node"]
script = ExtResource("1_fsjym")
snake_scene = ExtResource("2_xbujk")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(500, 500)
texture = ExtResource("3_ukesb")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="num1" type="Sprite2D" parent="."]
texture = ExtResource("4_tlp3y")
centered = false

[node name="num2" type="Sprite2D" parent="."]
texture = ExtResource("5_m0bxy")
centered = false

[node name="num3" type="Sprite2D" parent="."]
texture = ExtResource("6_yk0gr")
centered = false

[node name="Instructions" type="RichTextLabel" parent="."]
offset_left = 245.0
offset_top = 122.0
offset_right = 777.0
offset_bottom = 176.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 32
text = "Complete A Depth-First Search!"

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
